<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/SubMenu"
        android:orientation="horizontal"
        android:padding="16dp">

        <Switch
            android:id="@+id/frag_currency_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"

            android:text="@string/currency_rate_form_switch"
            android:textColor="#939393"

            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_rate_form_source"/>

        <EditText
            android:id="@+id/frag_currency_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginBottom="16dp"
            android:ems="12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_rate_form_date"/>

        <EditText
            android:id="@+id/frag_currency_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginBottom="16dp"
            android:ems="12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_rate_form_rate"/>

        <EditText
            android:id="@+id/frag_currency_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginBottom="16dp"
            android:inputType="number|numberDecimal"
            android:imeOptions="actionDone"
            android:ems="12" />

        <Button
            android:id="@+id/frag_currency_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/currency_rate_form_btn_manual" />

    </LinearLayout>

    <TextView
        android:id="@+id/frag_wish_list_msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="invisible"
        android:text="Wish List Fragment" />

</LinearLayout>