<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:clipToPadding="false"
        android:elevation="6dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/frag_exchange_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_weight=".8"
            android:background="@drawable/border"
            android:hint="@string/exchange_form_price"
            android:imeOptions="actionDone"
            android:inputType="number|numberDecimal" />

        <ImageButton
            android:id="@+id/frag_exchange_btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button"
            android:src="@drawable/ic_refresh_32" />

        <ImageButton
            android:id="@+id/frag_exchange_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button"
            android:src="@drawable/ic_heart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_form_tax"/>

        <EditText
            android:id="@+id/frag_exchange_total_taxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_form_final_price"/>

        <EditText
            android:id="@+id/frag_exchange_final_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_form_currency_rate"/>

        <EditText
            android:id="@+id/frag_exchange_currency_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_form_converted_price"/>

        <EditText
            android:id="@+id/frag_exchange_converted_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </LinearLayout>

</LinearLayout>
