<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/frag_preferences_switch_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences_form_update"
                style="@style/settingsTitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences_form_auto_update_info"
                style="@style/settingsText"/>

        </LinearLayout>

        <Switch
            android:id="@+id/frag_preferences_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:paddingLeft="16dp"
            android:layout_weight=".3"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D6D7D7"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/frag_preferences_province_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_province"
            style="@style/settingsTitle"/>

        <TextView
            android:id="@+id/frag_preferences_province_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_province"
            style="@style/settingsText"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D6D7D7"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/frag_preferences_currency_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_currency"
            style="@style/settingsTitle"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_currency_val"
            style="@style/settingsText" />

    </LinearLayout>


    <!--
    <Switch
        android:id="@+id/frag_preferences_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:checked="true"
        android:paddingBottom="16dp"
        android:text="@string/preferences_form_update"
        android:textColor="#939393"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#eeeeee"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/frag_preferences_province_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_province"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/frag_preferences_province_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_province"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#eeeeee"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/frag_preferences_currency_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_currency"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_form_currency_val"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>
    -->

</LinearLayout>